added blog content. added affiliate line to footers.

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -24,53 +26,75 @@
         </div>
     </header>
     <main>
-        <section id="home">
-            <div class="container">
-                <h2>Welcome to My Coding Journey</h2>
-                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and freelancing.</p>
-            </div>
-        </section>
-        <section id="about">
-            <div class="container">
-                <h2>About Me</h2>
-                <p>Learn more about my background, career change, and what drives me.</p>
-            </div>
-        </section>
         <section id="blog">
             <div class="container">
                 <h2>Blog</h2>
                 <p>Check out my latest blog posts and updates.</p>
             </div>
         </section>
-        <section id="portfolio">
-            <div class="container">
-                <h2>Portfolio</h2>
-                <p>Explore the projects and work I've done.</p>
-            </div>
-        </section>
-        <section id="testimonials">
-            <div class="container">
-                <h2>Testimonials</h2>
-                <p>Read feedback from clients and mentors.</p>
-            </div>
-        </section>
-        <section id="reviews">
-            <div class="container">
-                <h2>Reviews</h2>
-                <p>Find reviews of tools and resources I've used.</p>
-            </div>
-        </section>
-        <section id="contact">
-            <div class="container">
-                <h2>Contact</h2>
-                <p>Get in touch with me through this contact form or on social media.</p>
-            </div>
+
+        <!-- Blog post -->
+
+        <section>
+            <h2>Things I Have Learned. Week 2, Day 5.</h2>
+            <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what your code
+                is producing.</p>
+                
+<p>                Something as simple as an HDMI cable can easily transform your coding experience,
+                especially if you have a small screen laptop.</p>
+
+<p>                Method 1: HDMI Cable </p>
+<p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon">Amazon Link (other brands are available!)</a>.</p>
+</p>
+
+<p>                Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
+                Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
+                <p>You’re welcome.</p>
+<p>                Method 2: Wireless Display Adapters</p>
+                <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft Wireless
+                Display Adapter.</p>
+                <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
+                the device-specific instructions to connect your computer to your TV.</p>
+
+<p>                Method 3: Smart TV Apps</p>
+<p>                Some smart TVs have built-in apps or support screen mirroring technologies like Miracast, AirPlay, or
+                Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.</p>
+
+<p>                Method 4: DisplayPort or USB-C to HDMI Adapter</p>
+<p>                If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the HDMI port
+                on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
+
+<p>                Steps to Set Up the TV as a Second Screen
+                Connect the TV:
+
+                Use the appropriate cable or wireless method to connect your TV to your computer.
+                Configure Display Settings:
+
+                On Windows:
+                Right-click on the desktop and select "Display settings."
+                You should see your TV listed as a second monitor. If not, click on "Detect."
+                Choose how you want to use the TV: "Duplicate" (mirror the display), "Extend" (use as a separate
+                screen), or "Second screen only."
+                On macOS:
+                Go to "System Preferences" > "Displays."
+                You should see the TV listed as a second display. Adjust the settings to "Mirror Displays" or "Extend
+                Desktop."
+                Adjust Resolution and Scaling:
+
+                Ensure that the resolution and scaling settings are appropriate for your TV to get the best picture
+                quality.
+                Using your TV as a second screen can be very beneficial for coding, as it allows you to have more screen
+                real estate for your development environment and to easily view output or documentation.</p>
+
+            </p>
         </section>
     </main>
     <footer>
         <div class="container">
+            <p>As an Amazon Associate I earn from qualifying purchases</p>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
