--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -27,7 +29,8 @@
         <section id="home">
             <div class="container">
                 <h2>Welcome to My Coding Journey</h2>
-                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and freelancing.</p>
+                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and
+                    freelancing.</p>
             </div>
         </section>
         <section id="about">
@@ -69,8 +72,10 @@
     </main>
     <footer>
         <div class="container">
+            <p>As an Amazon Associate I earn from qualifying purchases</p>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
