added relevant meta tags to each page

--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Check out my reviews of equipment, tools and products that I use in my remote, freelance coding, social media management, and content creation journey.">
+    <meta name="keywords"
+        content="product reviews, remote workers, work from home, productivity, coding tools, social media tools, content creation tools, video editing tools, reviews">
+    <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
