--- a/pages/about.html
+++ b/pages/about.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Learn more about my background and what inspired me to make a late-career change into coding, social media management, and content creation.">
+    <meta name="keywords"
+        content="about me, career change, coding, social media management, content creation, video editing">
+    <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -27,7 +34,8 @@
         <section id="home">
             <div class="container">
                 <h2>Welcome to My Coding Journey</h2>
-                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and freelancing.</p>
+                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and
+                    freelancing.</p>
             </div>
         </section>
         <section id="about">
@@ -74,4 +82,5 @@
         </div>
     </footer>
 </body>
+
 </html>
