--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Read about my experiences, challenges, and successes as I navigate the world of coding and content creation.">
+    <meta name="keywords"
+        content="coding blog, coding experiences, content creation, social media management, video editing, career change blog">
+    <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -39,32 +44,33 @@
             <h2>Things I Have Learned. Week 2, Day 5.</h2>
             <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what your code
                 is producing.</p>
-                
-<p>                Something as simple as an HDMI cable can easily transform your coding experience,
+
+            <p> Something as simple as an HDMI cable can easily transform your coding experience,
                 especially if you have a small screen laptop.</p>
 
-<p>                Method 1: HDMI Cable </p>
-<p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon">Amazon Link (other brands are available!)</a>.</p>
-</p>
+            <p> Method 1: HDMI Cable </p>
+            <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
+                    class="amazon">Amazon Link (other brands are available!)</a>.</p>
+            </p>
 
-<p>                Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
+            <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
                 Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
-                <p>You’re welcome.</p>
-<p>                Method 2: Wireless Display Adapters</p>
-                <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft Wireless
+            <p>You’re welcome.</p>
+            <p> Method 2: Wireless Display Adapters</p>
+            <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft Wireless
                 Display Adapter.</p>
-                <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
+            <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
                 the device-specific instructions to connect your computer to your TV.</p>
 
-<p>                Method 3: Smart TV Apps</p>
-<p>                Some smart TVs have built-in apps or support screen mirroring technologies like Miracast, AirPlay, or
+            <p> Method 3: Smart TV Apps</p>
+            <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast, AirPlay, or
                 Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.</p>
 
-<p>                Method 4: DisplayPort or USB-C to HDMI Adapter</p>
-<p>                If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the HDMI port
+            <p> Method 4: DisplayPort or USB-C to HDMI Adapter</p>
+            <p> If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the HDMI port
                 on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
 
-<p>                Steps to Set Up the TV as a Second Screen
+            <p> Steps to Set Up the TV as a Second Screen
                 Connect the TV:
 
                 Use the appropriate cable or wireless method to connect your TV to your computer.
