added affiliate clause to all pages

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -77,8 +77,8 @@
     </main>
     <footer>
         <div class="container">
-            <p></p>
-            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
+                purchases.</p>            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
 </body>
