--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -77,7 +77,8 @@
     </main>
     <footer>
         <div class="container">
-            <p>As an Amazon Associate I earn from qualifying purchases</p>
+            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
+                purchases.</p>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
