removed generic content in all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,11 +31,13 @@
         </div>
     </header>
     <main>
-         <section id="contact">
+        <section id="contact">
             <div class="container">
                 <h2>Contact</h2>
-                <p>Until I have set this up, you can contact me at this email address Get in touch with me through this contact form or on social media.</p>
-                <p>Until I have set up the contact form, please feel free to reach out to me via email at <a href="mailto:laurajmtb@gmail.com">laurajmtb@gmail.com</a>. You can also connect with me on social media.</p>
+                <p>Until I have set up the contact form, please feel free to reach out to me via email at <a
+                        href="mailto:laurajmtb@gmail.com">laurajmtb@gmail.com</a>.</p>
+                <!-- 
+                <p>You can also connect with me on social media.</p> -->
             </div>
         </section>
     </main>
