--- a/backup-files/pages copy/blog.html
+++ b/backup-files/pages copy/blog.html
@@ -26,6 +26,7 @@
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="product-reviews.html">Product Reviews</a></li>
                     <li><a href="contact.html">Get in Touch!</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
@@ -97,7 +98,8 @@
     </main>
     <footer>
         <div class="container">
-            <p>As an Amazon Associate I earn from qualifying purchases</p>
+            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
+                purchases.</p>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
