--- a/backup-files/templates-copy/pages/blog-template.html
+++ b/backup-files/templates-copy/pages/blog-template.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+    
+    <!-- Add relevant meta tags for CEO -->
+        <meta name="description"
         content="Read about my experiences, challenges, and successes as I navigate the world of coding and content creation.">
     <meta name="keywords"
         content="coding blog, coding experiences, content creation, social media management, video editing, career change blog">
-    <meta name="author" content="LJ Talks">
+    
+        <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -26,7 +29,6 @@
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="product-reviews.html">Product Reviews</a></li>
                     <li><a href="contact.html">Get in Touch!</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
