--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+    <!-- Main Header Section -->
         <div class="container">
             <h1><a href="#">My Coding Journey</a></h1>
             <nav>
@@ -26,6 +27,7 @@
                     <li><a href="pages/testimonials.html">Testimonials</a></li>
                     <li><a href="pages/product-reviews.html">Product Reviews</a></li>
                     <li><a href="pages/contact.html">Get in Touch!</a></li>
+                    <li><a href="pages/signup.html" class="btn-signup">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
@@ -79,6 +81,7 @@
         <div class="container">
             <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
                 purchases.</p>
+                <a href="signup.html" class="btn-signup">Sign Up for Updates</a>
             <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
