--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -26,6 +26,7 @@
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="product-reviews.html" class="active">Product Reviews</a></li>
                     <li><a href="contact.html">Get in Touch!</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
