--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Add relevant meta tags for CEO -->
     <meta name="description"
-        content="Explore my portfolio showcasing projects and work I've completed in coding, social media management, and content creation.">
+        content="Read about my experiences, challenges, and successes as I navigate the world of coding and content creation.">
     <meta name="keywords"
-        content="portfolio, coding projects, social media management, content creation, video editing, web development">
+        content="coding blog, coding experiences, content creation, social media management, video editing, career change blog">
+
     <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -22,27 +25,29 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="portfolio.html" class="active">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="product-reviews.html">Product Reviews</a></li>
                     <li><a href="contact.html">Get in Touch!</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>
+                    <li><a href="signup.html" class="active">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section id="portfolio">
-            <div class="container">
-                <h2>Portfolio</h2>
-                <p>Explore the projects and work I've done.</p>
-            </div>
-        </section>
+        <h2>Sign Up for Updates</h2>
+        <p>Subscribe to my newsletter for the latest updates and news.</p>
+        <form action="submit_subscription.php" method="post">
+            <input type="text" name="name" id="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Enter your email" required>
+            <button type="submit">Subscribe</button>
+        </form>
     </main>
     <footer>
         <div class="container">
             <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
-                purchases.</p>            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+                purchases.</p>
+            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
         </div>
     </footer>
 </body>
