--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -26,7 +26,7 @@
                     <li><a href="testimonials.html" class="active">Testimonials</a></li>
                     <li><a href="product-reviews.html">Product Reviews</a></li>
                     <li><a href="contact.html">Get in Touch!</a></li>
-                </ul>
+                    <li><a href="signup.html">Sign Up</a></li>                </ul>
             </nav>
         </div>
     </header>
