--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -11,22 +11,41 @@
     <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <!-- MailerLite Universal -->
+    <script>
+        (function (w, d, e, u, f, l, n) {
+            w[f] = w[f] || function () {
+                    (w[f].q = w[f].q || [])
+                    .push(arguments);
+                }, l = d.createElement(e), l.async = 1, l.src = u,
+                n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
+        })
+        (window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
+        ml('account', '1050017');
+    </script>
+    <!-- End MailerLite Universal -->
 </head>
 
 <body>
+    <!-- Main Header Section -->
     <header>
         <div class="container">
-            <h1><a href="#">My Coding Journey</a></h1>
+            <h1><a href="index.html">My Coding Journey</a></h1>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="testimonials.html" class="active">Testimonials</a></li>
-                    <li><a href="product-reviews.html">Product Reviews</a></li>
-                    <li><a href="contact.html">Get in Touch!</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>                </ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">More</a>
+                        <div class="dropdown-content">
+                            <a href="/pages/blog.html">Blog</a>
+                            <a href="/pages/portfolio.html">Portfolio</a>
+                            <a href="/pages/testimonials.html">Testimonials</a>
+                            <a href="/pages/product-reviews.html">Product Reviews</a>
+                            <a href="/pages/contact.html">Get in Touch!</a>
+                        </div>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -40,9 +59,26 @@
     </main>
     <footer>
         <div class="container">
-            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying
-                purchases.</p>
-            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+            <section class="footer-top">
+                <a href="signup.html" class="btn-signup">Sign Up!</a>
+            </section>
+            <section class="footer-bottom">
+                <div class="footer-left">
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
+                        qualifying purchases.</p>
+                </div>
+                <div class="footer-center">
+                    <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+                </div>
+                <div class="footer-right">
+                    <nav>
+                        <ul>
+                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </section>
         </div>
     </footer>
 </body>
