fix broken links in headers

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <footer>
         <div class="container">
             <section class="footer-top">
-                <a href="signup.html" class="btn-signup">Sign Up!</a>
+                <a href="pages/signup.html" class="btn-signup">Sign Up!</a>
             </section>
             <section class="footer-bottom">
                 <div class="footer-left">
