--- a/pages/signup.html
+++ b/pages/signup.html
@@ -37,15 +37,15 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
-                            <a href="/pages/blog.html">Blog</a>
-                            <a href="/pages/portfolio.html">Portfolio</a>
-                            <a href="/pages/testimonials.html">Testimonials</a>
-                            <a href="/pages/product-reviews.html">Product Reviews</a>
-                            <a href="/pages/contact.html">Get in Touch!</a>
+                            <a href="blog.html">Blog</a>
+                            <a href="portfolio.html">Portfolio</a>
+                            <a href="testimonials.html">Testimonials</a>
+                            <a href="product-reviews.html">Product Reviews</a>
+                            <a href="contact.html">Get in Touch!</a>
                         </div>
                     </li>
                 </ul>
