--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,10 +33,10 @@
     <!-- Main Header Section -->
     <header>
         <div class="container">
-            <h1><a href="index.html">My Coding Journey</a></h1>
+            <h1><a href="../index.html">My Coding Journey</a></h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
