Added active class to all menu pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
                             <a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>
                             <a href="product-reviews.html">Product Reviews</a>
-                            <a href="contact.html">Get in Touch!</a>
+                            <a href="contact.html" class="active">Get in Touch!</a>
                         </div>
                     </li>
                 </ul>
