--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -41,7 +41,7 @@
                             <a href="blog.html">Blog</a>
                             <a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>
-                            <a href="product-reviews.html">Product Reviews</a>
+                            <a href="product-reviews.html" class="active">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
                     </li>
