--- a/pages/blog.html
+++ b/pages/blog.html
@@ -38,7 +38,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
-                            <a href="blog.html">Blog</a>
+                            <a href="blog.html" class="active">Blog</a>
                             <a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>
                             <a href="product-reviews.html">Product Reviews</a>
