fix active class

--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -40,7 +40,7 @@
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
                             <a href="portfolio.html">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>
+                            <a href="testimonials.html" class="active">Testimonials</a>
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
