--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1><a href="index.html">My Coding Journey</a></h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="pages/about.html">About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
