--- a/pages/signup.html
+++ b/pages/signup.html
@@ -63,10 +63,10 @@
     </main>
     <footer>
         <div class="container">
-            <section class="footer-top">
+            <div class="footer-top">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
-            </section>
-            <section class="footer-bottom">
+            </div>
+            <div class="footer-bottom">
                 <div class="footer-left">
                     <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
                         qualifying purchases.</p>
@@ -82,7 +82,7 @@
                         </ul>
                     </nav>
                 </div>
-            </section>
+            </div>
         </div>
     </footer>
 </body>
