--- a/pages/about.html
+++ b/pages/about.html
@@ -11,15 +11,19 @@
     <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="../assets/css/style.css">
- <!-- MailerLite Universal -->
- <script>
-    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
-    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
-    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
-    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
-    ml('account', '1050017');
-</script>
-<!-- End MailerLite Universal -->
+    <!-- MailerLite Universal -->
+    <script>
+        (function (w, d, e, u, f, l, n) {
+            w[f] = w[f] || function () {
+                    (w[f].q = w[f].q || [])
+                    .push(arguments);
+                }, l = d.createElement(e), l.async = 1, l.src = u,
+                n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
+        })
+        (window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
+        ml('account', '1050017');
+    </script>
+    <!-- End MailerLite Universal -->
 </head>
 
 <body>
@@ -47,7 +51,6 @@
     </header>
 
     <main>
-        </section>
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
@@ -57,12 +60,13 @@
     </main>
     <footer>
         <div class="container">
-            <section class="footer-top">
+            <div class="footer-top">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
-            </section>
-            <section class="footer-bottom">
+            </div>
+            <div class="footer-bottom">
                 <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from qualifying purchases.</p>
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
+                        qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
@@ -75,7 +79,7 @@
                         </ul>
                     </nav>
                 </div>
-            </section>
+            </div>
         </div>
     </footer>
 </body>
