--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -54,7 +54,6 @@
     </header>
     <main>
         <section id="privacy-policy">
-            <main>
                 <div class="container">
                     <h2>Privacy Policy</h2>
                     <p>Your privacy is important to us. This privacy policy explains how we collect, use, and protect
@@ -129,10 +128,10 @@
     </main>
     <footer>
         <div class="container">
-            <section class="footer-top">
+            <div class="footer-top">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
-            </section>
-            <section class="footer-bottom">
+            </div>
+            <div class="footer-bottom">
                 <div class="footer-left">
                     <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
                         qualifying purchases.</p>
@@ -148,7 +147,7 @@
                         </ul>
                     </nav>
                 </div>
-            </section>
+            </div>
         </div>
     </footer>
 </body>
