--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -133,8 +133,7 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank">Amazon Associate</a>, I earn from
-                        qualifying purchases.</p>
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I earn from qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
