--- a/pages/blog.html
+++ b/pages/blog.html
@@ -89,7 +89,7 @@
                 <div class="image">
                     <a href="https://amzn.to/3ykDImV" target="_blank"
                             rel="noopener noreferrer" class="amazon-image">
-                    <img src="/assets/images/affiliate/amazon/3ykDImV1.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                    <img src="../assets/images/affiliate/amazon/3ykDImV1.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
             <div class="blog-content reverse">
@@ -145,9 +145,8 @@
                 </div>
 
                 <div class="image">
-                    <a href="https://amzn.to/3ykDImV" target="_blank"
-                            rel="noopener noreferrer" class="amazon-image">
-                    <img src="/assets/images/affiliate/amazon/3ykDImV2.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
+                    <img src="../assets/images/affiliate/amazon/3ykDImV2.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
             <p> Using your TV as a second screen can be very beneficial for coding, as it allows you to have
