--- a/pages/blog.html
+++ b/pages/blog.html
@@ -135,10 +135,8 @@
                         </li>
                         <li> Adjust Resolution and Scaling:
                             <ul>
-                                Ensure that the resolution and scaling settings are appropriate for your TV to get the
-                                best
-                                picture
-                                quality.
+                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to get the
+                                best picture quality.</li>
                             </ul>
                         </li>
                     </ol>
@@ -161,7 +159,7 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon" alt="Glittery Garden Linux Commands Line Mouse pad - Extended Large Cheat Sheet Mousepad. Shortcuts to Kali/Red Hat/Ubuntu/OpenSUSE/Arch/Debian/Unix Programmer. XL Non-Slip Gaming Desk mat">Amazon Associate</a>, I
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
                         earn from qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
