added coming soon to sign up page, and favicons to all pages

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -27,6 +27,11 @@
         ml('account', '1050017');
     </script>
     <!-- End MailerLite Universal -->
+          <!--Favicon-->
+<link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 
 <body>
@@ -53,13 +58,19 @@
         </div>
     </header>
     <main>
+
+        
+        <h2>Sign Up for Updates - Coming soon!</h2>
+        <p>In the meantime... Please use my <a href="./contact.html">contact form</a> to subscribe to my email newsletter, for all the latest updates and news!</p>
+        
+        <!--
         <h2>Sign Up for Updates</h2>
         <p>Subscribe to my newsletter for the latest updates and news.</p>
         <form action="submit_subscription.php" method="post">
             <input type="text" name="name" id="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
-        </form>
+        </form>-->
     </main>
     <footer>
         <div class="container">
