Styled blog for mobiles. Hidden sign up button on catact page until it works.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,6 +61,7 @@
                 <div class="container">
                     <h2>Contact Me</h2>
                     <p>If you have any questions or feedback, feel free to reach out using the form below:</p>
+                    <p>Let me know if you want to receive regular updates about My Coding Journey!</p>
                     <form action="https://formspree.io/f/manwoajg" method="POST" class="contact-form">
                         <label for="name">Your name:</label>
                         <input type="text" id="name" name="name" required>
@@ -78,12 +79,13 @@
 
             <!-- <p>You can also connect with me on social media.</p> -->
 
-            <!-- Sign up to my newsletter -->
+            <!-- Sign up to my newsletter 
             <div class="container">
                 <h2>Stay up to date!</h2>
                 <p>Sign up to my email newsletter for updates, news and all the good stuff!</p>
                 <a href="signup.html" class="btn-signup">Sign Up</a>
             </div>
+            -->
 
         </section>
     </main>
