added a please be patient message to home

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <section id="home">
             <div class="container">
                 <h2>Hello!</h2>
-                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and
-                    freelancing.</p>
+                <p>A little space for me to share my progress, projects, and experiences as I navigate the world of coding and freelancing.</p>
+                <p>I currently 6 weeks into my coding journey and loving every minute. I love solving problems, even though things get pretty frustrating sometimes! Watch this site evolve as I learn new tricks and upskill. It's great to have you here!</p>
+                <p>Sometimes things go a bit squiffy in here. Like right now... Please be patient while I figure out how I broke it!</p>
             </div>
         </section>
         <div id="myphoto">
