corrected some text in blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -72,7 +72,7 @@
 
                     <h3> Method 1: HDMI Cable </h3>
                     <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
-                            rel="noopener noreferrer" class="amazon">Amazon (other brands are available!)</a>.</p>
+                            rel="noopener noreferrer" class="amazon">Amazon</a> (other brands are available!).</p>
                     <!-- add image https://amzn.to/3ykDImV-->
 
                     <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
