--- a/pages/blog.html
+++ b/pages/blog.html
@@ -29,28 +29,29 @@
         ml('account', '1050017');
     </script>
     <!-- End MailerLite Universal -->
-          <!--Favicon-->
-<link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="../assets/favicon/site.webmanifest">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="../index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="../index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html" class="active">Blog</a>
-                            <a href="portfolio.html">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>
+                            <a href="about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>-->
+                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
@@ -92,9 +93,9 @@
 
                 </div>
                 <div class="image">
-                    <a href="https://amzn.to/3ykDImV" target="_blank"
-                            rel="noopener noreferrer" class="amazon-image">
-                    <img src="../assets/images/affiliate/amazon/3ykDImV1.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
+                        <img src="../assets/images/affiliate/amazon/3ykDImV1.png"
+                            alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
             <div class="blog-content reverse">
@@ -140,8 +141,9 @@
                         </li>
                         <li> Adjust Resolution and Scaling:
                             <ul>
-                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to get the
-                                best picture quality.</li>
+                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to get
+                                    the
+                                    best picture quality.</li>
                             </ul>
                         </li>
                     </ol>
@@ -149,10 +151,12 @@
 
                 <div class="image">
                     <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
-                    <img src="../assets/images/affiliate/amazon/3ykDImV2.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                        <img src="../assets/images/affiliate/amazon/3ykDImV2.png"
+                            alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
-            <p class="center"> Using your TV as a second screen can be very beneficial for coding, as it allows you to have
+            <p class="center"> Using your TV as a second screen can be very beneficial for coding, as it allows you to
+                have
                 more screen real estate for your development environment and to easily view output or documentation.</p>
         </section>
     </main>
@@ -168,6 +172,8 @@
                         earn from qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
+
+
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
