--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -34,16 +34,15 @@
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="../index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="../index.html" id="logo-text"><h1>My Coding Journey</h1></a>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
+                            <a href="about.html">About</a>
                             <a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>
                             <a href="product-reviews.html" class="active">Product Reviews</a>
@@ -59,6 +58,7 @@
             <div class="container">
                 <h2>Product Reviews</h2>
                 <p>Find reviews of tools and resources I've used.</p>
+                <p>Coming Soon!</p>
             </div>
         </section>
     </main>
