--- a/pages/about.html
+++ b/pages/about.html
@@ -24,28 +24,29 @@
         ml('account', '1050017');
     </script>
     <!-- End MailerLite Universal -->
-     <!--Favicon-->
-<link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="../assets/favicon/site.webmanifest">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="../index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="../index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
-                            <a href="portfolio.html">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>
+                            <a href="about.html" class="active">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>-->
+                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
@@ -60,6 +61,7 @@
             <div class="container">
                 <h2>About Me</h2>
                 <p>Learn more about my background, career change, and what drives me.</p>
+            <p>Coming Soon!</p>
             </div>
         </section>
     </main>
@@ -70,7 +72,8 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I earn from qualifying purchases.</p>
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                        earn from qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
