--- a/pages/blog-archive/blog-day-3.html
+++ b/pages/blog-archive/blog-day-3.html
@@ -39,18 +39,19 @@
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="../index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="../index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html" class="active">Blog</a>
-                            <a href="portfolio.html">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>
+                            <a href="about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>-->
+                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
@@ -189,6 +190,28 @@
                 </div>
             </div>
         </div>
+<!--        <ul id="socials">
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab" )> <i
+                        class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our X/Twitter timeline (opens in a new tab" )> <i
+                        class="fa-brands fa-square-x-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube channel (opens in a new tab" )> <i
+                        class="fa-brands fa-square-youtube"></i></a></li>
+            <li><a href="https://www.linkedin.com" target="_blank" rel="noopener"
+                    aria-label="Visit our LinkedIn profile (opens in a new tab" )> <i
+                        class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram wall (opens in a new tab" )> <i
+                        class="fa-brands fa-square-instagram"></i></a></li>
+        </ul>-->
+
+    </footer>
+
+    <!-- Font Awesome Resource Link -->
+    <script src="https://kit.fontawesome.com/ec3fd166e9.js" crossorigin="anonymous"></script>
     </footer>
 </body>
 
