--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -34,18 +34,17 @@
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="../index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="../index.html" id="logo-text"><h1>My Coding Journey</h1></a>
             <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
-                            <a href="portfolio.html" class="active">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>
+                            <a href="about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>-->
+                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
@@ -59,6 +58,7 @@
             <div class="container">
                 <h2>Portfolio</h2>
                 <p>Explore the projects and work I've done.</p>
+                <p>Coming Soon!</p>
             </div>
         </section>
     </main>
