Changed header footer colors

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -44,9 +44,9 @@
                 <h1>My Coding Journey</h1>
             </a>
             <nav>
-                <ul id="header-menu">
+                <ul id="header-nav">
                     <li class="dropdown">
-                        <a href="#" class="dropbtn">More</a>
+                        <img src="../assets/images/logo/round-logo.png" alt="Logo" class="logo-round"></a>
                         <div class="dropdown-content">
                             <a href="blog.html" class="active">Blog</a>
                             <a href="about.html">About</a>
@@ -73,7 +73,7 @@
 
                     <h3> Method 1: HDMI Cable </h3>
                     <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
-                            rel="noopener noreferrer" class="amazon">Amazon</a> (other brands are available!).</p>
+                            rel="noopener noreferrer" class="amazon">Amazon (Affiliate Link)</a> (other brands are available!).</p>
                     <!-- add image https://amzn.to/3ykDImV-->
 
                     <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
@@ -95,7 +95,7 @@
                 <div class="image">
                     <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
                         <img src="../assets/images/affiliate/amazon/3ykDImV1.png"
-                            alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                            alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
             <div class="blog-content reverse">
@@ -152,13 +152,25 @@
                 <div class="image">
                     <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
                         <img src="../assets/images/affiliate/amazon/3ykDImV2.png"
-                            alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                            alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
             <p class="center"> Using your TV as a second screen can be very beneficial for coding, as it allows you to
                 have
                 more screen real estate for your development environment and to easily view output or documentation.</p>
         </section>
+        <!-- Previous and next blog arrows-->
+        <div class="container next-prev-blog">
+            <div class="prev-blog">
+                <!--<a href="pages/blog-archive/blog-day-3.html"><p>Last blog post</p></a>-->
+            </div>
+            <div class="next-blog">
+                <p>Next blog post</p>
+                <div class="right-arrow"><div></div></div>
+                <div class="left-arrow"><div></div></div>
+                
+            </div>
+        </div>
     </main>
     <!-- Footer-->
     <footer>
