make Hello responsive on main page

--- a/pages/blog-archive/blog-day-3.html
+++ b/pages/blog-archive/blog-day-3.html
@@ -165,6 +165,12 @@
             <p class="center"> Using your TV as a second screen can be very beneficial for coding, as it allows you to have
                 more screen real estate for your development environment and to easily view output or documentation.</p>
         </section>
+        <div class="next-blog">
+
+        </div>
+<div class="prev-blog">
+    
+</div>
     </main>
     <!-- Footer-->
     <footer>
