--- a/pages/blog.html
+++ b/pages/blog.html
@@ -50,13 +50,13 @@
                         <div class="dropdown-content">
                             <button onclick="myFunction()" class="dropbtn">Dropdown</button>
                             <div id="myDropdown" class="dropdown-content">
-                            <a href="blog.html" class="active">Blog</a>
-                            <a href="about.html">About</a>
-                            <!--<a href="portfolio.html">Portfolio</a>-->
-                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
-                            <a href="product-reviews.html">Product Reviews</a>
-                            <a href="contact.html">Get in Touch!</a>
-                        </div>
+                                <a href="blog.html" class="active">Blog</a>
+                                <a href="about.html">About</a>
+                                <!--<a href="portfolio.html">Portfolio</a>-->
+                                <!--<a href="testimonials.html" class="active">Testimonials</a>-->
+                                <a href="product-reviews.html">Product Reviews</a>
+                                <a href="contact.html">Get in Touch!</a>
+                            </div>
                     </li>
                 </ul>
             </nav>
@@ -67,6 +67,11 @@
         <section id="blog" class="container blog-post">
             <h2>Things I Have Learned. Week 2, Day 5.</h2>
             <div class="blog-content">
+                    <figure class="blog-hero">
+                        <img src="/pages/blog-archive/blog-images/blog-smallscreen-pexels-danny-meneses-340146-943096.jpg"
+                            alt="Laptop with lots of small code.">
+                        <figcaption>Photo by Pexels-Danny-Meneses</figcaption>
+                    </figure>
                 <div class="text">
                     <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what
                         your code is producing.</p>
@@ -75,14 +80,17 @@
 
                     <h3> Method 1: HDMI Cable </h3>
                     <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
-                            rel="noopener noreferrer" class="amazon">Amazon (Affiliate Link)</a> (other brands are available!).</p>
+                            rel="noopener noreferrer" class="amazon">Amazon (Affiliate Link)</a> (other brands are
+                        available!).</p>
                     <!-- add image https://amzn.to/3ykDImV-->
 
-                    <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
+                    <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
+                        screen.
                         Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
                     <p>You’re welcome.</p>
                     <h3> Method 2: Wireless Display Adapters</h3>
-                    <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft
+                    <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
+                        Microsoft
                         Wireless
                         Display Adapter.</p>
                     <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
@@ -91,7 +99,8 @@
                     <h3> Method 3: Smart TV Apps</h3>
                     <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
                         AirPlay, or
-                        Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.</p>
+                        Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.
+                    </p>
 
                 </div>
                 <div class="image">
@@ -143,7 +152,8 @@
                         </li>
                         <li> Adjust Resolution and Scaling:
                             <ul>
-                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to get
+                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to
+                                    get
                                     the
                                     best picture quality.</li>
                             </ul>
@@ -157,9 +167,9 @@
                             alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
-            <p class="center"> Using your TV as a second screen can be very beneficial for coding, as it allows you to
-                have
-                more screen real estate for your development environment and to easily view output or documentation.</p>
+            <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial working as you learn to code, as it allows you
+                to have more screen real estate for your development environment and to easily view output or documentation using equipment you possibly already have.
+            </p>
         </section>
         <!-- Previous and next blog arrows-->
         <div class="container next-prev-blog">
@@ -168,9 +178,13 @@
             </div>
             <div class="next-blog">
                 <p>Next blog post</p>
-                <div class="right-arrow"><div></div></div>
-                <div class="left-arrow"><div></div></div>
-                
+                <div class="right-arrow">
+                    <div></div>
+                </div>
+                <div class="left-arrow">
+                    <div></div>
+                </div>
+
             </div>
         </div>
     </main>
